{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 68,
  "lineage": "97875d8c-e87c-773a-15ba-7ae00d9f4b87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:364143303419:instance/i-021e3ae66a49078c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ngnix_profile",
            "id": "i-021e3ae66a49078c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00cb620b6d030823f",
            "private_dns": "ip-10-0-0-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.18",
            "public_dns": "ec2-54-166-24-11.compute-1.amazonaws.com",
            "public_ip": "54.166.24.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aa94200665631375",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2ba06d80713d996",
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ecf90a6f9e63eb4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ngnix_profile",
            "aws_iam_role.s3_Access_role",
            "aws_security_group.ngnix-sg",
            "aws_subnet.my-subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Demoinstance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:364143303419:instance/i-0fddd322f0e8368f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ngnix_profile",
            "id": "i-0fddd322f0e8368f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034e21daea8fcbb81",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-18-207-156-137.compute-1.amazonaws.com",
            "public_ip": "18.207.156.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0642eb469b91cbbb4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02707c23a84bda71e",
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ecf90a6f9e63eb4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ngnix_profile",
            "aws_iam_role.s3_Access_role",
            "aws_security_group.ngnix-sg",
            "aws_subnet.my-subnet2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:internet-gateway/igw-0b5ca403d50f2e36c",
            "id": "igw-0b5ca403d50f2e36c",
            "owner_id": "364143303419",
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ngnix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:loadbalancer/app/Global-web-alb/bc5d6a62a6372fcf",
            "arn_suffix": "app/Global-web-alb/bc5d6a62a6372fcf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Global-web-alb-212922980.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:364143303419:loadbalancer/app/Global-web-alb/bc5d6a62a6372fcf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Global-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-088aa632213aa5e07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02707c23a84bda71e"
              },
              {
                "subnet_id": "subnet-0f2ba06d80713d996"
              }
            ],
            "subnets": [
              "subnet-02707c23a84bda71e",
              "subnet-0f2ba06d80713d996"
            ],
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0fe69a34446e78ae7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.my-subnet1",
            "aws_subnet.my-subnet2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ngnix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:listener/app/Global-web-alb/bc5d6a62a6372fcf/36d038389d8ddb4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:364143303419:listener/app/Global-web-alb/bc5d6a62a6372fcf/36d038389d8ddb4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:loadbalancer/app/Global-web-alb/bc5d6a62a6372fcf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ngnix",
            "aws_lb_target_group.ngnix_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.my-subnet1",
            "aws_subnet.my-subnet2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ngnix_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669",
            "arn_suffix": "targetgroup/ngnix-tg-group/3cb036e9e0337669",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ngnix-tg-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ngnix1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669-20230915082252274700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669",
            "target_id": "i-021e3ae66a49078c5"
          },
          "dependencies": [
            "aws_iam_instance_profile.ngnix_profile",
            "aws_iam_role.s3_Access_role",
            "aws_instance.Demoinstance1",
            "aws_lb_target_group.ngnix_tg",
            "aws_security_group.ngnix-sg",
            "aws_subnet.my-subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ngnix2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669-20230915082251922800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:364143303419:targetgroup/ngnix-tg-group/3cb036e9e0337669",
            "target_id": "i-0fddd322f0e8368f9"
          },
          "dependencies": [
            "aws_iam_instance_profile.ngnix_profile",
            "aws_iam_role.s3_Access_role",
            "aws_instance.Demoinstance2",
            "aws_lb_target_group.ngnix_tg",
            "aws_security_group.ngnix-sg",
            "aws_subnet.my-subnet2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:route-table/rtb-09ab330233b944968",
            "id": "rtb-09ab330233b944968",
            "owner_id": "364143303419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5ca403d50f2e36c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-mysubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e0206c9e14b1b8",
            "route_table_id": "rtb-09ab330233b944968",
            "subnet_id": "subnet-0f2ba06d80713d996"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rtb",
            "aws_subnet.my-subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-mysubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceb98ea6d50d02ba",
            "route_table_id": "rtb-09ab330233b944968",
            "subnet_id": "subnet-02707c23a84bda71e"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rtb",
            "aws_subnet.my-subnet2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:security-group/sg-088aa632213aa5e07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088aa632213aa5e07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ngnix_alb_sg",
            "name_prefix": "",
            "owner_id": "364143303419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ngnix-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:security-group/sg-08ecf90a6f9e63eb4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ecf90a6f9e63eb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ngnix-sg",
            "name_prefix": "",
            "owner_id": "364143303419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:subnet/subnet-0f2ba06d80713d996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2ba06d80713d996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "364143303419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:subnet/subnet-02707c23a84bda71e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02707c23a84bda71e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "364143303419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0fe69a34446e78ae7"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364143303419:vpc/vpc-0fe69a34446e78ae7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f41890e156ed232",
            "default_route_table_id": "rtb-080c88abc9170cbce",
            "default_security_group_id": "sg-02a3f8195737c78e8",
            "dhcp_options_id": "dopt-0763fefe66365b2b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe69a34446e78ae7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080c88abc9170cbce",
            "owner_id": "364143303419",
            "tags": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Billing_code": "ABCDEF1234",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            }
          }
        }
      ]
    }
  ]
}